--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Pagina de vendas</h1>
+    <h3>Estoque da loja</h3>
     <a href="index.html">Ir para a pagina de inicio</a>
 </body>
 </html>
