--- a/sobre.html
+++ b/sobre.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pagina de vendas</h1>
-    <h3>Estoque da loja</h3>
+    <h1>Sobre nós</h1>
     <a href="index.html">Ir para a pagina de inicio</a>
-    <a href="sobre.html">Sobre</a>
 </body>
 </html>
